# koala-networkit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  log  param.csdp
cpp/: CMakeLists.txt
cpp/clique/: CMakeLists.txt  Clique.cpp  CographClique.cpp
cpp/cograph_rec/: CMakeLists.txt  CographAlg.cpp  cograph_alg.cpp
cpp/cograph_rec/cograph/: Coloring.cpp  Cotree.cpp  FactorizingPermutation.cpp  IndependentSet.cpp  MaxClique.cpp  Pathwidth.cpp  Twins.cpp  lists.cpp  pathwidth.cpp
cpp/cograph_recognition/: CMakeLists.txt  CographRecognition.cpp
cpp/cograph_recognition/cograph/: Recognition.cpp
cpp/coloring/: CMakeLists.txt  CographVertexColoring.cpp  DRVertexQueue.cpp  EnumerationVertexColoring.cpp  GreedyVertexColoring.cpp  InclusionExclusionVertexColoring.cpp  PerfectGraphColoring.cpp  PerfectGraphVertexColoring.cpp  VertexColoring.cpp
cpp/coloring/perfect/: color.cpp  color.h  commons.cpp  commons.h  theta.cpp  theta.h
cpp/dominating_set/: BranchAndReduceMSC.cpp  CMakeLists.txt  DominatingSet.cpp  ExactDominatingSet.cpp  ExhaustiveMDS.cpp  FominKratschWoeginger.cpp  MinimumDominatingSet.cpp  RooijBodlaenderMDS.cpp  SchiermeyerMDS.cpp
cpp/dominating_set/baker/: baker-k-outer-planar.hpp  bakers_technique.hpp  create_tree_decomposition.hpp  name_levels.hpp  problems.hpp
cpp/dominating_set/bodlaender/: bodlaender_impl.hpp
cpp/dominatingset/: BranchAndReduceMSC.cpp  CMakeLists.txt  ExhaustiveMDS.cpp  FominKratschWoeginger.cpp  MinimumDominatingSet.cpp  RooijBodlaenderMDS.cpp  SchiermeyerMDS.cpp
cpp/electric_flow/: CMakeLists.txt  ElectricFlow.cpp  ElectricNetwork.cpp  FlowNetwork.cpp  NaiveDynamicTree.cpp  NaiveLaplaceSolver.cpp
cpp/flow/: BKFlow.cpp  BoykovKolmogorovFlow.cpp  CMakeLists.txt  ElectricalFlow.cpp  MKMFlow.cpp  MalhotraKumarMaheshwariFlow.cpp  MaximumFlow.cpp  MinimumCostFlow.cpp  PushRelabel.cpp
cpp/flow/electric_flow/: ElectricFlow.cpp  ElectricNetwork.cpp  FlowNetwork.cpp  NaiveDynamicTree.cpp  NaiveLaplaceSolver.cpp
cpp/flow/electrical_flow/: ElectricalFlow.cpp  ElectricalNetwork.cpp  FlowNetwork.cpp  NaiveDynamicTree.cpp  NaiveLaplaceSolver.cpp
cpp/flow/krt/: DynamicTree.cpp  edge_designator.hpp  king_rao_tarjan.hpp  krt_edge_designator.hpp  krtgraph.hpp  logger.hpp
cpp/flow/maximum_flow/: DynamicTree.cpp  KrtEdgeDesignator.cpp
cpp/flow/minimum_cost_flow/: EdmondsKarpMCF.cpp  OrlinMCF.cpp  SuccessiveApproxMCC.cpp  SuccessiveApproxMCF.cpp  SuccessiveApproximationMCF.cpp
cpp/flow/util/: krtgraph.hpp  linkcut.cpp  logger.hpp  timer.cpp
cpp/graph/: CMakeLists.txt  GraphTools.cpp  PlanarGraphTools.cpp
cpp/independentSet/: SimpleIndependentSet.cpp
cpp/independent_set/: CMakeLists.txt  CographIndependentSet.cpp  ExactIndependentSet.cpp  ExactRecursiveIndependentSet.cpp  IndependentSet.cpp  PlanarGraphIndependentSet.cpp  SimpleIndependentSet.cpp
cpp/independent_set/baker/: baker-k-outer-planar.hpp  bakers_technique.hpp  create_tree_decomposition.hpp  level_face_traversal.hpp  visitors.hpp
cpp/independent_set/bodlaender/: bodlaender_impl.hpp
cpp/io/: CMakeLists.txt  D6GraphReader.cpp  D6GraphWriter.cpp  DimacsBinaryGraphReader.cpp  DimacsBinaryGraphWriter.cpp  DimacsGraphReader.cpp  DimacsGraphWriter.cpp  G6GraphReader.cpp  G6GraphWriter.cpp  S6GraphReader.cpp  S6GraphWriter.cpp
cpp/matching/: BipartiteGaussianMatching.cpp  BlossomMaximumMatching.cpp  CMakeLists.txt  EdmondsMaximumMatching.cpp  GabowMaximumMatching.cpp  GabowScalingMatching.cpp  GalilMicaliGabowMaximumMatching.cpp  GaussianMatching.cpp  GeneralGaussianMatching.cpp  LazyGaussElimination.cpp  MicaliGabowMaximumMatching.cpp  MicaliVaziraniMatching.cpp  NaiveDynamicComponents.cpp  NaiveGauss.cpp  NaiveGaussElimination.cpp  NaiveGaussianMatching.cpp
cpp/matching/gaussian_matching/: BipartiteGaussianMatching.cpp  GeneralGaussianMatching.cpp  LazyGaussElimination.cpp  NaiveDynamicComponents.cpp  NaiveGaussElimination.cpp  NaiveGaussianMatching.cpp
cpp/max_clique/: CMakeLists.txt  CographMaxClique.cpp  MaxClique.cpp
cpp/max_cut/: BranchAndBoundMaxCut.cpp  CMakeLists.txt  GoemansWilliamsonMaxCut.cpp  MaxCut.cpp  NaiveMaxCut.cpp  RankTwoRelaxationMaxCut.cpp
cpp/min_cut/: CMakeLists.txt  HaoOrlinMinCut.cpp  KargerMinCut.cpp  KargerSteinMinCut.cpp  MinCut.cpp  PushRelabelMinCut.cpp  StoerWagnerMinCut.cpp
cpp/mst/: CMakeLists.txt  MinimumSpanningTree.cpp
cpp/mst/mst/: BoruvkaMST.cpp  BoruvkaMST.hpp  KktMST.cpp  KktMST.hpp  KruskalMST.cpp  KruskalMST.hpp  LCA.cpp  LCA.hpp  MSTV.cpp  MSTV.hpp  MinimalSpanningTree.hpp  utils.hpp
cpp/pathwidth/: CMakeLists.txt  CographPathwidth.cpp  Pathwidth.cpp
cpp/planar_sssp/: CMakeLists.txt  FredericksonPlanarSSSP.cpp  HenzingerPlanarSSSP.cpp  HenzingerPlannarSSSP.cpp  HenzingerPriorityQueue.cpp  PlanarSSSP.cpp  PlanarUtils.cpp  SuitableRDivision.cpp  TopologyBasedHeap.cpp
cpp/recognition/: CMakeLists.txt  ChordalGraphRecognition.cpp  CographAlg.cpp  CographRecognition.cpp  CographRecognitionOther.cpp  PerfectGraphRecognition.cpp  PlanarGraphRecognition.cpp
cpp/recognition/chordal/: LexBFSChordalGraphRecognition.cpp  MaximumCardinalitySearchChordalGraphRecognition.cpp
cpp/recognition/cograph/: BretscherCorneilHabibPaulCographRecognition.cpp  CoTree.cpp  CorneilStewartPerlCographRecognition.cpp  DahlhausCographRecognition.cpp  FactorizingPermutation.cpp  HabibPaulCographRecognition.cpp  Twins.cpp
cpp/recognition/cograph_recognition/: CoTree.cpp  CographRecognition.cpp  Recognition.cpp
cpp/recognition/other/: commons.cpp  commons.h  jewels.cpp  jewels.h  nearCleaners.cpp  nearCleaners.h  oddHoles.cpp  oddHoles.h  perfect.cpp  perfect.h  pyramids.cpp  pyramids.h  testCommons.cpp  testCommons.h
cpp/recognition/perfect/: Jewels.cpp  NearCleaners.cpp  OddHoles.cpp  Pyramids.cpp
cpp/set_cover/: BranchAndReduceMSC.cpp  BranchAndReduceSetCover.cpp  CMakeLists.txt
cpp/shortest_path/: CMakeLists.txt  FredericksonPlanarSSSP.cpp  HenzingerPlanarSSSP.cpp  PlanarSSSP.cpp
cpp/structures/: CMakeLists.txt  Cotree.cpp
cpp/traversal/: BFS.cpp  CMakeLists.txt  PathInplace.cpp
input/: perfect5.g6  (+17 more)
(+480 files in other folders)
