add_subdirectory(coloring)
add_subdirectory(dominating_set)
add_subdirectory(independent_set)
add_subdirectory(io)
add_subdirectory(flow)
add_subdirectory(graph)
add_subdirectory(mst)
add_subdirectory(recognition)
add_subdirectory(set_cover)
add_subdirectory(traversal)
add_subdirectory(max_clique)
add_subdirectory(structures)