add_subdirectory(coloring)
add_subdirectory(clique)
add_subdirectory(dominating_set)
add_subdirectory(flow)
add_subdirectory(graph)
add_subdirectory(independent_set)
add_subdirectory(io)
add_subdirectory(max_cut)
add_subdirectory(min_cut)
add_subdirectory(mst)
add_subdirectory(pathwidth)
add_subdirectory(recognition)
add_subdirectory(set_cover)
add_subdirectory(structures)
add_subdirectory(traversal)
add_subdirectory(matching)
add_subdirectory(shortest_path)
